--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -1,6 +1,26 @@
+<!-- <html>
+	<head>
+		<title>Bitly | URL Eater</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
+
+		<link rel= "stylesheet" type="style.css" href="application.css" >
+	
+
+	</head>
+	<body>
+		
+	</body>
+</html> -->
+
 <html>
 	<head>
-		<title>Sinatra Framework</title>
+		<title>Bitly | URL Eater</title>
+	
+		
+		<link rel="shortcut icon" href="img/favico.png" type="image/x-icon" />
+
+		<link rel="stylesheet" type="text/css" href="css/application.css" />
+
 	</head>
 	<body>
 		<%= yield %>
